[gd_scene load_steps=13 format=3 uid="uid://bn37kxinbcbli"]

[ext_resource type="Script" path="res://Scripts/ViewModels/ShopView.gd" id="1_8a47o"]
[ext_resource type="PackedScene" uid="uid://dbnxp1fwqmss0" path="res://upgrade.tscn" id="2_dysxx"]
[ext_resource type="Texture2D" uid="uid://dr0pefk5tadnn" path="res://img/Yarn/yarn_yellow.png" id="2_sv7fn"]
[ext_resource type="Script" path="res://Scripts/T_I18n.gd" id="3_2rqsg"]
[ext_resource type="Texture2D" uid="uid://if0kb84w7wdb" path="res://img/Yarn Pressed/yarn_yellow_pressed.png" id="3_lqps8"]
[ext_resource type="Texture2D" uid="uid://bgkeaqlpugvpb" path="res://img/yarn_disabled.png" id="4_lnjv7"]
[ext_resource type="Texture2D" uid="uid://7x2kwq5aah6j" path="res://img/Yarn/yarn_teal.png" id="5_wntem"]
[ext_resource type="Texture2D" uid="uid://blrbnver440nt" path="res://img/Yarn Pressed/yarn_teal_pressed.png" id="6_v2ccw"]
[ext_resource type="Texture2D" uid="uid://eghhpk6guik3" path="res://img/Yarn/yarn_purple.png" id="7_n8rfw"]
[ext_resource type="Texture2D" uid="uid://blx460ekm6bbd" path="res://img/Yarn Pressed/yarn_purple_pressed.png" id="8_mcxob"]
[ext_resource type="Texture2D" uid="uid://bmo4cer2rl6dh" path="res://img/Yarn/yarn_red.png" id="11_mlf2u"]

[sub_resource type="LabelSettings" id="LabelSettings_enr35"]
font_color = Color(0, 0, 0, 1)

[node name="Shop" type="Node2D"]
metadata/_edit_horizontal_guides_ = [2.0]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 580.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
localize_numeral_system = false
metadata/_edit_use_anchors_ = true

[node name="UpgradeTypes" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 4.56
anchor_right = 1.0
anchor_bottom = 5.38
offset_top = -3.05176e-05
grow_horizontal = 2
grow_vertical = 2

[node name="Clickers" type="Button" parent="Control/UpgradeTypes"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Clickers"
script = ExtResource("3_2rqsg")

[node name="Upgrades" type="Button" parent="Control/UpgradeTypes"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Upgrades"
script = ExtResource("3_2rqsg")

[node name="Mods" type="Button" parent="Control/UpgradeTypes"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Modifications"
script = ExtResource("3_2rqsg")

[node name="TextureButton" type="TextureButton" parent="Control/UpgradeTypes"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("2_sv7fn")
texture_pressed = ExtResource("3_lqps8")
texture_disabled = ExtResource("4_lnjv7")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Control/UpgradeTypes/TextureButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Clickers"
label_settings = SubResource("LabelSettings_enr35")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_2rqsg")

[node name="TextureButton2" type="TextureButton" parent="Control/UpgradeTypes"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("5_wntem")
texture_pressed = ExtResource("6_v2ccw")
texture_disabled = ExtResource("4_lnjv7")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Control/UpgradeTypes/TextureButton2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Enhancements"
label_settings = SubResource("LabelSettings_enr35")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_2rqsg")

[node name="TextureButton3" type="TextureButton" parent="Control/UpgradeTypes"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("7_n8rfw")
texture_pressed = ExtResource("8_mcxob")
texture_disabled = ExtResource("4_lnjv7")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Control/UpgradeTypes/TextureButton3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Modifications"
label_settings = SubResource("LabelSettings_enr35")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_2rqsg")

[node name="ListOfUpgrades" type="Control" parent="Control"]
layout_mode = 1
anchor_top = 5.38
anchor_right = 1.0
anchor_bottom = 9.038
offset_bottom = 0.200012
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8a47o")

[node name="Clickers" type="ScrollContainer" parent="Control/ListOfUpgrades"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="Container" type="VBoxContainer" parent="Control/ListOfUpgrades/Clickers"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Upgrade" parent="Control/ListOfUpgrades/Clickers/Container" instance=ExtResource("2_dysxx")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Enhancement" type="ScrollContainer" parent="Control/ListOfUpgrades"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Container" type="VBoxContainer" parent="Control/ListOfUpgrades/Enhancement"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Upgrade" parent="Control/ListOfUpgrades/Enhancement/Container" instance=ExtResource("2_dysxx")]
visible = false
layout_mode = 2

[node name="Mods" type="ScrollContainer" parent="Control/ListOfUpgrades"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Container" type="VBoxContainer" parent="Control/ListOfUpgrades/Mods"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Upgrade" parent="Control/ListOfUpgrades/Mods/Container" instance=ExtResource("2_dysxx")]
visible = false
layout_mode = 2

[node name="Multiplyers" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.34
anchor_top = 3.95
anchor_right = 0.998
anchor_bottom = 4.45
offset_left = -0.199997
offset_top = -3.05176e-05
offset_right = 0.159973
offset_bottom = -3.05176e-05

[node name="Sell" type="Button" parent="Control/Multiplyers"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sell"
script = ExtResource("3_2rqsg")

[node name="TextureRect" type="TextureRect" parent="Control/Multiplyers/Sell"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_mlf2u")
expand_mode = 1
stretch_mode = 1
flip_h = true

[node name="1" type="Button" parent="Control/Multiplyers"]
layout_mode = 2
size_flags_horizontal = 3
text = "x1"

[node name="TextureRect" type="TextureRect" parent="Control/Multiplyers/1"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_mlf2u")
expand_mode = 1
stretch_mode = 1

[node name="10" type="Button" parent="Control/Multiplyers"]
layout_mode = 2
size_flags_horizontal = 3
text = "x10"

[node name="TextureRect" type="TextureRect" parent="Control/Multiplyers/10"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_mlf2u")
expand_mode = 1
stretch_mode = 1

[node name="100" type="Button" parent="Control/Multiplyers"]
layout_mode = 2
size_flags_horizontal = 3
text = "x100"

[node name="TextureRect" type="TextureRect" parent="Control/Multiplyers/100"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_mlf2u")
expand_mode = 1
stretch_mode = 1

[node name="Max" type="Button" parent="Control/Multiplyers"]
layout_mode = 2
size_flags_horizontal = 3
text = "Max"
script = ExtResource("3_2rqsg")

[node name="TextureRect" type="TextureRect" parent="Control/Multiplyers/Max"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_mlf2u")
expand_mode = 1
stretch_mode = 1

[connection signal="pressed" from="Control/UpgradeTypes/Clickers" to="Control/ListOfUpgrades" method="ViewClickers"]
[connection signal="pressed" from="Control/UpgradeTypes/Upgrades" to="Control/ListOfUpgrades" method="ViewEnhancement"]
[connection signal="pressed" from="Control/UpgradeTypes/Mods" to="Control/ListOfUpgrades" method="ViewMods"]
[connection signal="pressed" from="Control/UpgradeTypes/TextureButton" to="Control/ListOfUpgrades" method="ViewClickers"]
[connection signal="pressed" from="Control/UpgradeTypes/TextureButton2" to="Control/ListOfUpgrades" method="ViewEnhancement"]
[connection signal="pressed" from="Control/UpgradeTypes/TextureButton3" to="Control/ListOfUpgrades" method="ViewMods"]
[connection signal="pressed" from="Control/Multiplyers/Sell" to="Control/ListOfUpgrades" method="_on_sell_pressed"]
[connection signal="pressed" from="Control/Multiplyers/1" to="Control/ListOfUpgrades" method="_on_1_pressed"]
[connection signal="pressed" from="Control/Multiplyers/10" to="Control/ListOfUpgrades" method="_on_10_pressed"]
[connection signal="pressed" from="Control/Multiplyers/100" to="Control/ListOfUpgrades" method="_on_100_pressed"]
[connection signal="pressed" from="Control/Multiplyers/Max" to="Control/ListOfUpgrades" method="_on_max_pressed"]
